force-app/main/default/objects/ucinn_ascendv2__Level_Benefit__c/ucinn_ascendv2__Level_Benefit__c.object-meta.xml
<CustomObject>
    <description>Junction object between Membership Benefit and Levels</description>
    <label>Level / Benefit</label>
    <nameField>
        <label>Level/Benefit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Levels / Benefits</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>