force-app/main/default/objects/ucinn_ascendv2__Level_Benefit__c/fields/ucinn_ascendv2__Benefit_Giving_Society_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Benefit_Giving_Society_Formula__c</fullName>
    <description>Membership Benefit&apos;s Giving Society</description>
    <formula>ucinn_ascendv2__Membership_Benefit__r.ucinn_ascendv2__Giving_Society__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Benefit Giving Society</label>
    <type>Text</type>
</CustomField>