force-app/main/default/objects/ucinn_ascendv2__Level_Benefit__c/fields/ucinn_ascendv2__Benefit_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Benefit_Name_Formula__c</fullName>
    <formula>ucinn_ascendv2__Membership_Benefit__r.ucinn_ascendv2__Benefit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Benefit Name</label>
    <type>Text</type>
</CustomField>