force-app/main/default/objects/ucinn_ascendv2__Level_Benefit__c/fields/ucinn_ascendv2__Level_Benefit_Name_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Level_Benefit_Name_Auto_Number__c</fullName>
    <displayFormat>LB-{0000000}</displayFormat>
    <label>Level Benefit Name Auto Number</label>
    <type>AutoNumber</type>
</CustomField>