force-app/main/default/objects/ucinn_ascendv2__Level_Benefit__c/fields/ucinn_ascendv2__Membership_Benefit_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Membership_Benefit_Name__c</fullName>
    <formula>ucinn_ascendv2__Membership_Benefit_Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership Benefit Name</label>
    <type>Text</type>
</CustomField>