force-app/main/default/objects/ucinn_ascendv2__Level_Benefit__c/fields/ucinn_ascendv2__Membership_Benefit_Product__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Membership_Benefit_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membership Benefit</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Levels / Benefits</relationshipLabel>
    <relationshipName>Levels_Benefits_Membership_Benefit_Prod</relationshipName>
    <type>Lookup</type>
</CustomField>