force-app/main/default/objects/ucinn_ascendv2__Level_Benefit__c/fields/ucinn_ascendv2__Membership_Level__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Membership_Level__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membership Level</label>
    <referenceTo>ucinn_ascendv2__Membership_Level__c</referenceTo>
    <relationshipLabel>Levels / Benefits</relationshipLabel>
    <relationshipName>Levels_Benefits_Membership_Level</relationshipName>
    <type>Lookup</type>
</CustomField>