force-app/main/default/objects/ucinn_ascendv2__Level_Benefit__c/fields/ucinn_ascendv2__Membership_Level_Product__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Membership_Level_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membership Level</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Levels / Benefits (Membership Level)</relationshipLabel>
    <relationshipName>Levels_Benefits_Membership_Level_Product</relationshipName>
    <type>Lookup</type>
</CustomField>