force-app/main/default/objects/ucinn_ascendv2__Level_Benefit__c/fields/ucinn_ascendv2__Quantity__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>