force-app/main/default/objects/ucinn_ascendv2__Level_Benefit__c/fields/ucinn_ascendv2__Society_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Society_Formula__c</fullName>
    <description>Membership Level&apos;s Giving Society</description>
    <formula>ucinn_ascendv2__Membership_Level__r.ucinn_ascendv2__Giving_Society__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Society</label>
    <type>Text</type>
</CustomField>